<resources>
    <string name="app_name">Visit Egypt</string>
    <string name="Email">E-mail</string>
    <string name="loginMsg">Login</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="phoneNo">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgetPassword">
        <u>
            Forgot your password?
        </u>
    </string>
    <string name="newHere">
        New Here ?
        <b>
            Sign up
        </b>
    </string>
    <string name="aleardyMembed">
        Already Member ?
        <b>
            Login
        </b>
    </string>
    <string name="signIn">SIGN IN</string>
    <string name="signUp">SIGN UP</string>
    <string name="logOut">LOG OUT</string>
    <string name="foreigner_adult">Foreigner Adult</string>
    <string name="foreigner_student">Foreigner Student</string>
    <string name="foreigner_personal_video">Foreigner Personal Video</string>
    <string name="foreigner_personal_photo">Foreigner Personal Photography</string>
    <string name="egyptian_adult">Egyptian Adult</string>
    <string name="egyptian_student">Egyptian Student</string>
    <string name="egyptian_personal_photo">Egyptian Personal Photography</string>
    <string name="egyptian_personal_video">Egyptian Personal Video</string>
    <string name="children">Children</string>
    <string name="loading">Please wait...</string>
    <string name="open">Open</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="day">DAY</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <string name="review">WRITE A REVIEW</string>
    <string name="artifacts">Artifacts</string>
    <string name="no_data">No data</string>
    <string name="location">Location</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No Reviews</string>
    <string name="know_this_place">Know this place?</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="prices">Ticket Prices</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Discover</string>
    <string name="title_account">Account</string>
    <string name="title_setting">Setting</string>
    <string name="title_ar">AR</string>
    <string name="setting">Setting</string>
    <string name="recommendations">RECOMENDATIONS</string>


    <string name="bot_msg">Bot Message</string>
    <string name="user_msg">User Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="game_view_content_description">Game view</string>
    <string name="title_activity_new_home">NewHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Loading Name</string>
    <string name="nav_header_subtitle">Loading Mail</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_discover">Discover</string>
    <string name="menu_near_me">Near Me</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_map">Map</string>
    <string name="menu_booking">Booking</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="Recommendation">Recommendation</string>
    <string name="you_may_like">You May Like</string>
    <string name="other_people_may_like">Other People Like</string>
    <string name="places_to_visit">Places to visit</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="chat">Chat</string>
    <string name="user_badges">My Badges</string>
    <string name="Search_visit_egypt">Search Visti Egypt</string>


    <string name="server_client_id">1008372786382-b12co7cdm09mssi73ip89bdmtt66294i.apps.googleusercontent.com</string>

    <string name="facebook_app_id">564583515004991</string>
    <string name="fb_login_protocol_scheme">fb564583515004991</string>
    <string name="facebook_client_token">56789</string>
    <string name="channel_name" translatable="false">VisitEgypt</string>
    <string name="channel_description" translatable="false">VisitEgypt</string>
    <string name="default_notification_channel_id" translatable="false">com.visitegypt</string>


    <string name="complete">Completed</string>
    <string name="gamification">Gamification</string>
    <string name="start_the_adventure">Start The Adventure</string>
    <string name="remaining_activities">Remaining Activities</string>
    <string name="my_interests">My Interests</string>
    <string name="trip_mate">Trip Mate</string>
    <string name="trip_mate_request">Trip Mate Request</string>
    <string name="discover_places">Discover All Places</string>
    <string name="see_all">see all</string>
    <string name="see_all_arrow"><![CDATA[see all >]]></string>
    <string name="one_remaining_activity">1 remaining activity</string>
    <string name="remaining_activities_number"> remaining activities</string>
    <string name="title_activity_animated_splash">AnimatedSplash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
