<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_discover">
    <fragment
        android:id="@+id/nav_discover"
        android:name="com.visitegypt.presentation.home.parent.HomeFragment"
        android:label="Explore"
        tools:layout="@layout/fragment_home_parent">

    </fragment>

    <fragment
        android:id="@+id/nav_activities"
        android:name="com.visitegypt.presentation.home.child.activity.ActivitiyChild"
        android:label="@string/menu_activities"
        tools:layout="@layout/activitiy_child_fragment" />

    <activity
        android:id="@+id/setting"
        android:name="com.visitegypt.presentation.setting.SettingActivity"
        android:label="@string/setting"
        tools:layout="@layout/activity_setting" />

    <fragment
        android:id="@+id/userProfile"
        android:name="com.visitegypt.presentation.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/gaming"
        android:name="com.visitegypt.presentation.gamification.GamificationFragment"
        android:label="@string/gamification"
        tools:layout="@layout/gamification_fragment" />

    <fragment
        android:id="@+id/tripMate"
        android:name="com.visitegypt.presentation.tripmate.TripMate"
        android:label="@string/trip_mate"
        tools:layout="@layout/trip_mate_fragment" />

    <fragment
        android:id="@+id/tripMateRequest"
        android:name="com.visitegypt.presentation.tripmateRequest.TripMateRequest"
        android:label="@string/trip_mate_request"
        tools:layout="@layout/trip_mate_request_fragment" />


</navigation>