<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:backgroundTint="@color/nav_drawer_color"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"

        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_account_circle_24" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/okImageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignRight="@+id/imageView"
            android:layout_alignBottom="@+id/imageView"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/confirm_circle" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textSize="14sp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#444444" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/nav_header_subtitle"
        android:textColor="#888888" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_shape"
        android:shadowColor="@color/gray"
        android:text="Edit"
        app:backgroundTint="@null"
        app:cornerRadius="60dp"

        >

    </com.google.android.material.button.MaterialButton>
</LinearLayout>