<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signup.SignUpActivity">


    <View
        android:id="@+id/viewBackGround"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_registerbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/emailTxtField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/boarder"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toEndOf="@id/textfield"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/email"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/textGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".27" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/signUp"
        android:textColor="@color/mainColor"
        android:textSize="35sp"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="@id/textGuideLine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toTopOf="@id/guideLineTop" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/firstName"
        android:textColor="@color/mainColor"
        android:textSize="18sp"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="@id/textGuideLine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/signUp" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/fistTextField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/boarder"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toEndOf="@id/textfield"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/firstName"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/lastName"
        android:textColor="@color/mainColor"
        android:textSize="18sp"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="@id/textGuideLine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/fistTextField" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/lastTextField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/boarder"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toEndOf="@id/textfield"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/lastName"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Email"
        android:textColor="@color/mainColor"
        android:textSize="18sp"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="@id/textGuideLine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/lastTextField" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/phoneNo"
        android:textColor="@color/mainColor"
        android:textSize="18sp"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="@id/textGuideLine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/emailTxtField" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/phoneNumbertxtField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/boarder"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toEndOf="@id/textfield"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/passowrd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/password"
        android:textColor="@color/mainColor"
        android:textSize="18sp"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="@id/textGuideLine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/phoneNumbertxtField" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/passwordTxtField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="textPassword"
        android:background="@drawable/boarder"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toEndOf="@id/textfield"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/passowrd"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtaleardy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/aleardyMembed"
        android:onClick="signInButton"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/guideLineBottom"
        app:layout_constraintDimensionRatio="7:1"
        app:layout_constraintEnd_toEndOf="@id/textfield"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/passwordTxtField"
        app:layout_constraintVertical_bias="0.85" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpbutton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/mainColor"
        android:onClick="signupOnclick"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="@id/endGuideLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/textfield"

        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />


</androidx.constraintlayout.widget.ConstraintLayout>